Update List Proposal & GitIgnore-Databases

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
-assets/files
-application/config/database.php
+.DS_Store
+
+application/cache/*
+!application/cache/index.html
+
+application/config/*
+!application/config/database.php
+
+application/logs/*
+!application/logs/index.html
+
+!application/*/.htaccess
+
+assets/files/*
+
+composer.lock
+
+user_guide_src/build/*
+user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
+user_guide_src/cilexer/pycilexer.egg-info/*
+/vendor/
+
+# IDE Files
+#-------------------------
+/nbproject/
+.idea/*
+
+## Sublime Text cache files
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+/tests/tests/
+/tests/results/
+
+
+
+# assets/files
+# application/config/database.php
